commit bilingual contents

--- a/docs/visual-basic/misc/bc30238.md
+++ b/docs/visual-basic/misc/bc30238.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - BC30238
 ms.assetid: 81513cb5-69e7-4d62-b33e-e54cb8c5e8bf
-ms.openlocfilehash: 5add2630a392677318d2ca10e5ace3c4390ca437
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: 16370a8894660d5728abe28ee0cc279ae852624a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913498"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379861"
 ---
-# <a name="loop-cannot-have-a-condition-if-matching-do-has-one"></a><span data-ttu-id="81523-102">'Loop' non può contenere una condizione se questa è già presente nell'elemento 'Do' corrispondente</span><span class="sxs-lookup"><span data-stu-id="81523-102">'Loop' cannot have a condition if matching 'Do' has one</span></span>
-<span data-ttu-id="81523-103">Un'istruzione `Loop` contiene una clausola `While` o `Until` e anche l'istruzione `Do` corrispondente contiene una clausola di questo tipo.</span><span class="sxs-lookup"><span data-stu-id="81523-103">A `Loop` statement contains a `While` or `Until` clause, and the corresponding `Do` statement also contains such a clause.</span></span> <span data-ttu-id="81523-104">Solo una delle istruzioni `Do` e `Loop` in un ciclo può specificare una condizione.</span><span class="sxs-lookup"><span data-stu-id="81523-104">Only one of the `Do` and `Loop` statements in a loop can specify a condition.</span></span>  
+# <a name="loop-cannot-have-a-condition-if-matching-do-has-one"></a><span data-ttu-id="a358c-102">'Loop' non può contenere una condizione se questa è già presente nell'elemento 'Do' corrispondente</span><span class="sxs-lookup"><span data-stu-id="a358c-102">'Loop' cannot have a condition if matching 'Do' has one</span></span>
+<span data-ttu-id="a358c-103">Un'istruzione `Loop` contiene una clausola `While` o `Until` e anche l'istruzione `Do` corrispondente contiene una clausola di questo tipo.</span><span class="sxs-lookup"><span data-stu-id="a358c-103">A `Loop` statement contains a `While` or `Until` clause, and the corresponding `Do` statement also contains such a clause.</span></span> <span data-ttu-id="a358c-104">Solo una delle istruzioni `Do` e `Loop` in un ciclo può specificare una condizione.</span><span class="sxs-lookup"><span data-stu-id="a358c-104">Only one of the `Do` and `Loop` statements in a loop can specify a condition.</span></span>  
   
- <span data-ttu-id="81523-105">**ID errore:** BC30238</span><span class="sxs-lookup"><span data-stu-id="81523-105">**Error ID:** BC30238</span></span>  
+ <span data-ttu-id="a358c-105">**ID errore:** BC30238</span><span class="sxs-lookup"><span data-stu-id="a358c-105">**Error ID:** BC30238</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="81523-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="81523-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a358c-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a358c-106">To correct this error</span></span>  
   
-- <span data-ttu-id="81523-107">Rimuovere la clausola `While` o `Until` dall'istruzione `Do` o dall'istruzione `Loop` .</span><span class="sxs-lookup"><span data-stu-id="81523-107">Remove the `While` or `Until` clause from either the `Do` statement or the `Loop` statement.</span></span>  
+- <span data-ttu-id="a358c-107">Rimuovere la clausola `While` o `Until` dall'istruzione `Do` o dall'istruzione `Loop` .</span><span class="sxs-lookup"><span data-stu-id="a358c-107">Remove the `While` or `Until` clause from either the `Do` statement or the `Loop` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="81523-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="81523-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a358c-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a358c-108">See also</span></span>
 
-- [<span data-ttu-id="81523-109">Istruzione Do...Loop</span><span class="sxs-lookup"><span data-stu-id="81523-109">Do...Loop Statement</span></span>](../../visual-basic/language-reference/statements/do-loop-statement.md)
+- [<span data-ttu-id="a358c-109">Istruzione Do...Loop</span><span class="sxs-lookup"><span data-stu-id="a358c-109">Do...Loop Statement</span></span>](../language-reference/statements/do-loop-statement.md)
