--- a/docs/visual-basic/misc/bc33013.md
+++ b/docs/visual-basic/misc/bc33013.md
@@ -1,5 +1,5 @@
 ---
-title: Gli operatori non possono essere dichiarati '<keyword>'
+title: Gli operatori non possono essere dichiarati ' <keyword> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc33013
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC33013
 ms.assetid: bfd805f4-e30e-4553-9cb7-2690595f0480
-ms.openlocfilehash: a989a66bac436fe1762086810059517d994b1c5b
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: d00f351d9ba5cd39d8b90f2cf6d5a253d078576c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64912948"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385223"
 ---
-# <a name="operators-cannot-be-declared-keyword"></a><span data-ttu-id="b0eff-102">Gli operatori non possono essere dichiarati '\<parola chiave >'</span><span class="sxs-lookup"><span data-stu-id="b0eff-102">Operators cannot be declared '\<keyword>'</span></span>
-<span data-ttu-id="b0eff-103">Un operatore è dichiarato con una parola chiave che non è valida per le definizioni dell'operatore.</span><span class="sxs-lookup"><span data-stu-id="b0eff-103">An operator is declared with a keyword that is not valid for operator definitions.</span></span>  
+# <a name="operators-cannot-be-declared-keyword"></a><span data-ttu-id="d9b13-102">Gli operatori non possono essere dichiarati ' \<keyword> '</span><span class="sxs-lookup"><span data-stu-id="d9b13-102">Operators cannot be declared '\<keyword>'</span></span>
+<span data-ttu-id="d9b13-103">Un operatore è dichiarato con una parola chiave che non è valida per le definizioni dell'operatore.</span><span class="sxs-lookup"><span data-stu-id="d9b13-103">An operator is declared with a keyword that is not valid for operator definitions.</span></span>  
   
- <span data-ttu-id="b0eff-104">Ogni operatore deve essere dichiarato sia come [pubbliche](../../visual-basic/language-reference/modifiers/public.md) e [condiviso](../../visual-basic/language-reference/modifiers/shared.md).</span><span class="sxs-lookup"><span data-stu-id="b0eff-104">Every operator must be declared as both [Public](../../visual-basic/language-reference/modifiers/public.md) and [Shared](../../visual-basic/language-reference/modifiers/shared.md).</span></span> <span data-ttu-id="b0eff-105">Inoltre, un operatore di conversione deve essere dichiarato con [Widening](../../visual-basic/language-reference/modifiers/widening.md) o [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md), ma non con entrambi.</span><span class="sxs-lookup"><span data-stu-id="b0eff-105">In addition, a conversion operator must be declared with either [Widening](../../visual-basic/language-reference/modifiers/widening.md) or [Narrowing](../../visual-basic/language-reference/modifiers/narrowing.md), but not both.</span></span> <span data-ttu-id="b0eff-106">Una definizione di operatore può includere facoltativamente le parole chiave [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) o [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) .</span><span class="sxs-lookup"><span data-stu-id="b0eff-106">An operator definition can optionally include the [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) or [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) keywords.</span></span> <span data-ttu-id="b0eff-107">Non sono consentite altre parole chiave in un' [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md).</span><span class="sxs-lookup"><span data-stu-id="b0eff-107">No other keywords are permitted in an [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md).</span></span>  
+ <span data-ttu-id="d9b13-104">Ogni operatore deve essere dichiarato come [pubblico](../language-reference/modifiers/public.md) e [condiviso](../language-reference/modifiers/shared.md).</span><span class="sxs-lookup"><span data-stu-id="d9b13-104">Every operator must be declared as both [Public](../language-reference/modifiers/public.md) and [Shared](../language-reference/modifiers/shared.md).</span></span> <span data-ttu-id="d9b13-105">Inoltre, un operatore di conversione deve essere dichiarato con [Widening](../language-reference/modifiers/widening.md) o [Narrowing](../language-reference/modifiers/narrowing.md), ma non con entrambi.</span><span class="sxs-lookup"><span data-stu-id="d9b13-105">In addition, a conversion operator must be declared with either [Widening](../language-reference/modifiers/widening.md) or [Narrowing](../language-reference/modifiers/narrowing.md), but not both.</span></span> <span data-ttu-id="d9b13-106">Una definizione di operatore può includere facoltativamente le parole chiave [Overloads](../language-reference/modifiers/overloads.md) o [Shadows](../language-reference/modifiers/shadows.md) .</span><span class="sxs-lookup"><span data-stu-id="d9b13-106">An operator definition can optionally include the [Overloads](../language-reference/modifiers/overloads.md) or [Shadows](../language-reference/modifiers/shadows.md) keywords.</span></span> <span data-ttu-id="d9b13-107">Non sono consentite altre parole chiave in un' [Operator Statement](../language-reference/statements/operator-statement.md).</span><span class="sxs-lookup"><span data-stu-id="d9b13-107">No other keywords are permitted in an [Operator Statement](../language-reference/statements/operator-statement.md).</span></span>  
   
- <span data-ttu-id="b0eff-108">**ID errore:** BC33013</span><span class="sxs-lookup"><span data-stu-id="b0eff-108">**Error ID:** BC33013</span></span>  
+ <span data-ttu-id="d9b13-108">**ID errore:** BC33013</span><span class="sxs-lookup"><span data-stu-id="d9b13-108">**Error ID:** BC33013</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="b0eff-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="b0eff-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="d9b13-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="d9b13-109">To correct this error</span></span>  
   
-- <span data-ttu-id="b0eff-110">Rimuovere la parola chiave non valida dalla definizione dell'operatore.</span><span class="sxs-lookup"><span data-stu-id="b0eff-110">Remove the invalid keyword from the operator definition.</span></span>  
+- <span data-ttu-id="d9b13-110">Rimuovere la parola chiave non valida dalla definizione dell'operatore.</span><span class="sxs-lookup"><span data-stu-id="d9b13-110">Remove the invalid keyword from the operator definition.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b0eff-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b0eff-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="d9b13-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="d9b13-111">See also</span></span>
 
-- [<span data-ttu-id="b0eff-112">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="b0eff-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [<span data-ttu-id="b0eff-113">Procedura: Definire un operatore</span><span class="sxs-lookup"><span data-stu-id="b0eff-113">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [<span data-ttu-id="b0eff-114">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="b0eff-114">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [<span data-ttu-id="d9b13-112">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="d9b13-112">Operator Procedures</span></span>](../programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="d9b13-113">Procedura: definire un operatore</span><span class="sxs-lookup"><span data-stu-id="d9b13-113">How to: Define an Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="d9b13-114">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="d9b13-114">How to: Define a Conversion Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
