--- a/docs/visual-basic/misc/bc33039.md
+++ b/docs/visual-basic/misc/bc33039.md
@@ -1,5 +1,5 @@
 ---
-title: Tipi restituiti e parametri di '<operator>'deve essere'<typename>' da usare in un'istruzione 'For'
+title: I tipi restituiti e i tipi di parametro di '<operator>' devono essere '<typename>' per poter essere usati in un'istruzione 'For'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc33039
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - BC33039
 ms.assetid: 30e8cfa8-c086-474c-a4f0-ad01d01096e2
-ms.openlocfilehash: 7e68fa2f283d58418e8d1e07753388ac44d4fb90
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: fbe3df05d73b51b79cd5d60894d203cb6fbb4c1f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61761929"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379666"
 ---
-# <a name="return-and-parameter-types-of-operator-must-be-typename-to-be-used-in-a-for-statement"></a><span data-ttu-id="c7c84-102">Tipi restituiti e parametri di '\<operatore >' deve essere '\<nomeTipo >' da usare in un'istruzione 'For'</span><span class="sxs-lookup"><span data-stu-id="c7c84-102">Return and parameter types of '\<operator>' must be '\<typename>' to be used in a 'For' statement</span></span>
-<span data-ttu-id="c7c84-103">Un ciclo `For` specifica una variabile contatore di un tipo che non definisce l'operatore `+` o `-` con i parametri e il valore restituito del suo stesso tipo.</span><span class="sxs-lookup"><span data-stu-id="c7c84-103">A `For` loop specifies a counter variable of a type that does not define the `+` or `-` operator with parameters and return value of its own type.</span></span>  
+# <a name="return-and-parameter-types-of-operator-must-be-typename-to-be-used-in-a-for-statement"></a><span data-ttu-id="2090a-102">I tipi restituiti e i tipi di parametro di '\<operator>' devono essere '\<typename>' per poter essere usati in un'istruzione 'For'</span><span class="sxs-lookup"><span data-stu-id="2090a-102">Return and parameter types of '\<operator>' must be '\<typename>' to be used in a 'For' statement</span></span>
+<span data-ttu-id="2090a-103">Un ciclo `For` specifica una variabile contatore di un tipo che non definisce l'operatore `+` o `-` con i parametri e il valore restituito del suo stesso tipo.</span><span class="sxs-lookup"><span data-stu-id="2090a-103">A `For` loop specifies a counter variable of a type that does not define the `+` or `-` operator with parameters and return value of its own type.</span></span>  
   
- <span data-ttu-id="c7c84-104">La variabile contatore deve essere di un tipo che supporta operatori di aggiunta (`+`) e sottrazione (`-`) che agiscono completamente nel relativo tipo contenitore.</span><span class="sxs-lookup"><span data-stu-id="c7c84-104">The counter variable must be of a type that supports addition (`+`) and subtraction (`-`) operators that operate completely on their containing type.</span></span> <span data-ttu-id="c7c84-105">Ciò significa che sia gli operandi che il valore restituito devono essere del tipo della variabile contatore.</span><span class="sxs-lookup"><span data-stu-id="c7c84-105">This means both of the operands and the return value must be of the type of the counter variable.</span></span>  
+ <span data-ttu-id="2090a-104">La variabile contatore deve essere di un tipo che supporta operatori di aggiunta (`+`) e sottrazione (`-`) che agiscono completamente nel relativo tipo contenitore.</span><span class="sxs-lookup"><span data-stu-id="2090a-104">The counter variable must be of a type that supports addition (`+`) and subtraction (`-`) operators that operate completely on their containing type.</span></span> <span data-ttu-id="2090a-105">Ciò significa che sia gli operandi che il valore restituito devono essere del tipo della variabile contatore.</span><span class="sxs-lookup"><span data-stu-id="2090a-105">This means both of the operands and the return value must be of the type of the counter variable.</span></span>  
   
- <span data-ttu-id="c7c84-106">Se si usa un tipo di dati numerico per la variabile contatore, gli operatori `+` e `-` sono supportati nel tipo contenitore.</span><span class="sxs-lookup"><span data-stu-id="c7c84-106">If you use a numeric data type for the counter variable, the `+` and `-` operators are supported on the containing type.</span></span> <span data-ttu-id="c7c84-107">Se si usa una classe o una struttura definita dall'utente, è necessario definire entrambi gli operatori con operandi e valore restituito del tipo di classe o struttura.</span><span class="sxs-lookup"><span data-stu-id="c7c84-107">If you use a user-defined class or structure, you must define both operators with operands and return value of the type of your class or structure.</span></span>  
+ <span data-ttu-id="2090a-106">Se si usa un tipo di dati numerico per la variabile contatore, gli operatori `+` e `-` sono supportati nel tipo contenitore.</span><span class="sxs-lookup"><span data-stu-id="2090a-106">If you use a numeric data type for the counter variable, the `+` and `-` operators are supported on the containing type.</span></span> <span data-ttu-id="2090a-107">Se si usa una classe o una struttura definita dall'utente, è necessario definire entrambi gli operatori con operandi e valore restituito del tipo di classe o struttura.</span><span class="sxs-lookup"><span data-stu-id="2090a-107">If you use a user-defined class or structure, you must define both operators with operands and return value of the type of your class or structure.</span></span>  
   
- <span data-ttu-id="c7c84-108">**ID errore:** BC33039</span><span class="sxs-lookup"><span data-stu-id="c7c84-108">**Error ID:** BC33039</span></span>  
+ <span data-ttu-id="2090a-108">**ID errore:** BC33039</span><span class="sxs-lookup"><span data-stu-id="2090a-108">**Error ID:** BC33039</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c7c84-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="c7c84-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2090a-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2090a-109">To correct this error</span></span>  
   
-1. <span data-ttu-id="c7c84-110">Accertarsi che il tipo di dati della variabile contatore sia stato digitato in maniera corretta.</span><span class="sxs-lookup"><span data-stu-id="c7c84-110">Make sure the spelling of the counter-variable data type is correct.</span></span>  
+1. <span data-ttu-id="2090a-110">Accertarsi che il tipo di dati della variabile contatore sia stato digitato in maniera corretta.</span><span class="sxs-lookup"><span data-stu-id="2090a-110">Make sure the spelling of the counter-variable data type is correct.</span></span>  
   
-2. <span data-ttu-id="c7c84-111">Se si usa una classe o una struttura definita dall'utente per la variabile contatore, definire gli operatori `+` e `-` che operano completamente in tale classe o struttura.</span><span class="sxs-lookup"><span data-stu-id="c7c84-111">If you are using a user-defined class or structure for the counter variable, define `+` and `-` operators that operate completely on that class or structure.</span></span>  
+2. <span data-ttu-id="2090a-111">Se si usa una classe o una struttura definita dall'utente per la variabile contatore, definire gli operatori `+` e `-` che operano completamente in tale classe o struttura.</span><span class="sxs-lookup"><span data-stu-id="2090a-111">If you are using a user-defined class or structure for the counter variable, define `+` and `-` operators that operate completely on that class or structure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c7c84-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="c7c84-112">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2090a-112">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2090a-112">See also</span></span>
 
-- [<span data-ttu-id="c7c84-113">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="c7c84-113">For...Next Statement</span></span>](../../visual-basic/language-reference/statements/for-next-statement.md)
-- [<span data-ttu-id="c7c84-114">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="c7c84-114">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [<span data-ttu-id="c7c84-115">Istruzione Operator</span><span class="sxs-lookup"><span data-stu-id="c7c84-115">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
-- [<span data-ttu-id="c7c84-116">Procedura: Definire un operatore</span><span class="sxs-lookup"><span data-stu-id="c7c84-116">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [<span data-ttu-id="c7c84-117">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="c7c84-117">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [<span data-ttu-id="2090a-113">Istruzione For...Next</span><span class="sxs-lookup"><span data-stu-id="2090a-113">For...Next Statement</span></span>](../language-reference/statements/for-next-statement.md)
+- [<span data-ttu-id="2090a-114">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="2090a-114">Operator Procedures</span></span>](../programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="2090a-115">Operator Statement</span><span class="sxs-lookup"><span data-stu-id="2090a-115">Operator Statement</span></span>](../language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="2090a-116">Procedura: definire un operatore</span><span class="sxs-lookup"><span data-stu-id="2090a-116">How to: Define an Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="2090a-117">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="2090a-117">How to: Define a Conversion Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
