--- a/docs/visual-basic/misc/bc36566.md
+++ b/docs/visual-basic/misc/bc36566.md
@@ -7,16 +7,16 @@ f1_keywords:
 helpviewer_keywords:
 - BC36566
 ms.assetid: b37af6bc-abd0-4436-bf8a-a467e3603342
-ms.openlocfilehash: b9343866d5e38cacaefc161f66a07291f873a107
-ms.sourcegitcommit: 43d10ef65f0f1fd6c3b515e363bde11a3fcd8d6d
+ms.openlocfilehash: 31096dc73dba00a434072331ccd4a54aab254b6d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/04/2020
-ms.locfileid: "78266782"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378055"
 ---
-# <a name="parameter-parametername-already-has-a-matching-omitted-argument"></a><span data-ttu-id="15a8c-102">Il\<parametro ' nomeparametro>' contiene già un argomento omesso corrispondente</span><span class="sxs-lookup"><span data-stu-id="15a8c-102">Parameter '\<parametername>' already has a matching omitted argument</span></span>
+# <a name="parameter-parametername-already-has-a-matching-omitted-argument"></a><span data-ttu-id="8e0f5-102">Il parametro '\<parametername>' ha già un argomento omesso corrispondente</span><span class="sxs-lookup"><span data-stu-id="8e0f5-102">Parameter '\<parametername>' already has a matching omitted argument</span></span>
 
-<span data-ttu-id="15a8c-103">Una chiamata di routine fornisce un argomento in base al nome dopo aver omesso lo stesso argomento in base alla posizione.</span><span class="sxs-lookup"><span data-stu-id="15a8c-103">A procedure call supplies an argument by name after omitting the same argument by position.</span></span> <span data-ttu-id="15a8c-104">Di seguito è riportato un esempio:</span><span class="sxs-lookup"><span data-stu-id="15a8c-104">The following is an example:</span></span>
+<span data-ttu-id="8e0f5-103">Una chiamata di routine fornisce un argomento in base al nome dopo aver omesso lo stesso argomento in base alla posizione.</span><span class="sxs-lookup"><span data-stu-id="8e0f5-103">A procedure call supplies an argument by name after omitting the same argument by position.</span></span> <span data-ttu-id="8e0f5-104">Di seguito è riportato un esempio:</span><span class="sxs-lookup"><span data-stu-id="8e0f5-104">The following is an example:</span></span>
   
 ```vb  
 Public Sub ABC(ByVal X As Byte, Optional ByVal Y As Byte = 0, _  
@@ -26,12 +26,12 @@ Public Sub ABC(ByVal X As Byte, Optional ByVal Y As Byte = 0, _
 Call ABC(6, , Y:=3)
 ```  
   
- <span data-ttu-id="15a8c-105">**ID errore:** BC36566</span><span class="sxs-lookup"><span data-stu-id="15a8c-105">**Error ID:** BC36566</span></span>  
+ <span data-ttu-id="8e0f5-105">**ID errore:** BC36566</span><span class="sxs-lookup"><span data-stu-id="8e0f5-105">**Error ID:** BC36566</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="15a8c-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="15a8c-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8e0f5-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8e0f5-106">To correct this error</span></span>  
   
-- <span data-ttu-id="15a8c-107">Specificare l'argomento in base alla posizione oppure rimuovere la virgola che lo omette.</span><span class="sxs-lookup"><span data-stu-id="15a8c-107">Supply the argument by position, or remove the comma that omits it.</span></span>  
+- <span data-ttu-id="8e0f5-107">Specificare l'argomento in base alla posizione oppure rimuovere la virgola che lo omette.</span><span class="sxs-lookup"><span data-stu-id="8e0f5-107">Supply the argument by position, or remove the comma that omits it.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="15a8c-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="15a8c-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8e0f5-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8e0f5-108">See also</span></span>
 
-- [<span data-ttu-id="15a8c-109">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="15a8c-109">Passing Arguments by Position and by Name</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+- [<span data-ttu-id="8e0f5-109">Passaggio di argomenti in base alla posizione e al nome</span><span class="sxs-lookup"><span data-stu-id="8e0f5-109">Passing Arguments by Position and by Name</span></span>](../programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
