--- a/docs/visual-basic/misc/bc40021.md
+++ b/docs/visual-basic/misc/bc40021.md
@@ -1,5 +1,5 @@
 ---
-title: Membro '<membername>'è in conflitto con membro'<membername>'nel tipo di base'<basetypename>' e pertanto non deve essere dichiarato 'Overloads'
+title: Il membro '<membername>' è in conflitto con il membro '<membername>' nel tipo di base '<basetypename>', quindi deve essere dichiarato come 'Shadows'
 ms.date: 07/20/2015
 f1_keywords:
 - bc40021
@@ -7,33 +7,33 @@ f1_keywords:
 helpviewer_keywords:
 - BC40021
 ms.assetid: 2ec72726-ab0e-4545-9c1e-2409eb54482e
-ms.openlocfilehash: 0f328edbb2cda9c7265624678b07263216558143
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 159de87f9309a403723d89c55c9ddf5af359ef14
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64624448"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384404"
 ---
-# <a name="member-membername-conflicts-with-member-membername-in-the-base-type-basetypename-and-so-should-not-be-declared-overloads"></a><span data-ttu-id="5bd3b-102">Membro '\<nomeMembro >' è in conflitto con membro '\<nomeMembro >' nel tipo di base '\<nomeTipoBase >' e pertanto non deve essere dichiarato 'Overloads'</span><span class="sxs-lookup"><span data-stu-id="5bd3b-102">Member '\<membername>' conflicts with member '\<membername>' in the base type '\<basetypename>' and so should not be declared 'Overloads'</span></span>
-<span data-ttu-id="5bd3b-103">Una proprietà o routine usa la parola chiave [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) per dichiarare nuovamente una proprietà o routine esistente con lo stesso nome, ma la proprietà o routine esistente si trova nella classe base.</span><span class="sxs-lookup"><span data-stu-id="5bd3b-103">A property or procedure uses the [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) keyword to redeclare an existing property or procedure with the same name, but the existing property or procedure is in the base class.</span></span>  
+# <a name="member-membername-conflicts-with-member-membername-in-the-base-type-basetypename-and-so-should-not-be-declared-overloads"></a><span data-ttu-id="ace2e-102">Il membro '\<membername>' è in conflitto con il membro '\<membername>' nel tipo di base '\<basetypename>', quindi deve essere dichiarato come 'Shadows'</span><span class="sxs-lookup"><span data-stu-id="ace2e-102">Member '\<membername>' conflicts with member '\<membername>' in the base type '\<basetypename>' and so should not be declared 'Overloads'</span></span>
+<span data-ttu-id="ace2e-103">Una proprietà o routine usa la parola chiave [Overloads](../language-reference/modifiers/overloads.md) per dichiarare nuovamente una proprietà o routine esistente con lo stesso nome, ma la proprietà o routine esistente si trova nella classe base.</span><span class="sxs-lookup"><span data-stu-id="ace2e-103">A property or procedure uses the [Overloads](../language-reference/modifiers/overloads.md) keyword to redeclare an existing property or procedure with the same name, but the existing property or procedure is in the base class.</span></span>  
   
- <span data-ttu-id="5bd3b-104">L'overload viene usato per definire più versioni di una proprietà o routine tutte appartenenti alla stessa classe.</span><span class="sxs-lookup"><span data-stu-id="5bd3b-104">Overloading is used to define multiple versions of a property or procedure all in the same class.</span></span> <span data-ttu-id="5bd3b-105">Non è possibile definire un'ulteriore versione del membro di una classe base a meno che questo non specifichi già [Overloads](../../visual-basic/language-reference/modifiers/overloads.md).</span><span class="sxs-lookup"><span data-stu-id="5bd3b-105">You cannot define an additional version of a base class member unless the base class member already specifies [Overloads](../../visual-basic/language-reference/modifiers/overloads.md).</span></span>  
+ <span data-ttu-id="ace2e-104">L'overload viene usato per definire più versioni di una proprietà o routine tutte appartenenti alla stessa classe.</span><span class="sxs-lookup"><span data-stu-id="ace2e-104">Overloading is used to define multiple versions of a property or procedure all in the same class.</span></span> <span data-ttu-id="ace2e-105">Non è possibile definire un'ulteriore versione del membro di una classe base a meno che questo non specifichi già [Overloads](../language-reference/modifiers/overloads.md).</span><span class="sxs-lookup"><span data-stu-id="ace2e-105">You cannot define an additional version of a base class member unless the base class member already specifies [Overloads](../language-reference/modifiers/overloads.md).</span></span>  
   
- <span data-ttu-id="5bd3b-106">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="5bd3b-106">By default, this message is a warning.</span></span> <span data-ttu-id="5bd3b-107">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="5bd3b-107">For more information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="ace2e-106">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="ace2e-106">By default, this message is a warning.</span></span> <span data-ttu-id="ace2e-107">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="ace2e-107">For more information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="5bd3b-108">**ID errore:** BC40021</span><span class="sxs-lookup"><span data-stu-id="5bd3b-108">**Error ID:** BC40021</span></span>  
+ <span data-ttu-id="ace2e-108">**ID errore:** BC40021</span><span class="sxs-lookup"><span data-stu-id="ace2e-108">**Error ID:** BC40021</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="5bd3b-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="5bd3b-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ace2e-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ace2e-109">To correct this error</span></span>  
   
-- <span data-ttu-id="5bd3b-110">Se si vuole definire un'ulteriore versione del membro di una classe base e accedere al codice sorgente della classe stessa, aggiungere la parola chiave [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) alla definizione della classe base.</span><span class="sxs-lookup"><span data-stu-id="5bd3b-110">If you intend to define an additional version of the base class member and have access to the source code of the base class, add the [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) keyword to the base class definition.</span></span>  
+- <span data-ttu-id="ace2e-110">Se si vuole definire un'ulteriore versione del membro di una classe base e accedere al codice sorgente della classe stessa, aggiungere la parola chiave [Overloads](../language-reference/modifiers/overloads.md) alla definizione della classe base.</span><span class="sxs-lookup"><span data-stu-id="ace2e-110">If you intend to define an additional version of the base class member and have access to the source code of the base class, add the [Overloads](../language-reference/modifiers/overloads.md) keyword to the base class definition.</span></span>  
   
-- <span data-ttu-id="5bd3b-111">Se non si hanno i diritti di accesso al codice sorgente della classe base, non è possibile eseguire l'overload del membro in una classe derivata.</span><span class="sxs-lookup"><span data-stu-id="5bd3b-111">If you do not have access to the source code of the base class, you cannot overload the member in a derived class.</span></span> <span data-ttu-id="5bd3b-112">Rimuovere la parola chiave `Overloads` .</span><span class="sxs-lookup"><span data-stu-id="5bd3b-112">Remove the `Overloads` keyword.</span></span>  
+- <span data-ttu-id="ace2e-111">Se non si hanno i diritti di accesso al codice sorgente della classe base, non è possibile eseguire l'overload del membro in una classe derivata.</span><span class="sxs-lookup"><span data-stu-id="ace2e-111">If you do not have access to the source code of the base class, you cannot overload the member in a derived class.</span></span> <span data-ttu-id="ace2e-112">Rimuovere la parola chiave `Overloads` .</span><span class="sxs-lookup"><span data-stu-id="ace2e-112">Remove the `Overloads` keyword.</span></span>  
   
-- <span data-ttu-id="5bd3b-113">Se si vuole sostituire il membro della classe base anziché definirne un'ulteriore versione, usare la parola chiave [Overrides](../../visual-basic/language-reference/modifiers/overrides.md) invece di `Overloads`.</span><span class="sxs-lookup"><span data-stu-id="5bd3b-113">If you wish to replace the base class member instead of defining an additional version of it, use the [Overrides](../../visual-basic/language-reference/modifiers/overrides.md) keyword instead of `Overloads`.</span></span>  
+- <span data-ttu-id="ace2e-113">Se si vuole sostituire il membro della classe base anziché definirne un'ulteriore versione, usare la parola chiave [Overrides](../language-reference/modifiers/overrides.md) invece di `Overloads`.</span><span class="sxs-lookup"><span data-stu-id="ace2e-113">If you wish to replace the base class member instead of defining an additional version of it, use the [Overrides](../language-reference/modifiers/overrides.md) keyword instead of `Overloads`.</span></span>  
   
-- <span data-ttu-id="5bd3b-114">Se si vuole nascondere il membro della classe base con un nuovo membro nella classe derivata, usare la parola chiave [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) invece di `Overloads`.</span><span class="sxs-lookup"><span data-stu-id="5bd3b-114">If you wish to hide the base class member with a new member in the derived class, use the [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) keyword instead of `Overloads`.</span></span>  
+- <span data-ttu-id="ace2e-114">Se si vuole nascondere il membro della classe base con un nuovo membro nella classe derivata, usare la parola chiave [Shadows](../language-reference/modifiers/shadows.md) invece di `Overloads`.</span><span class="sxs-lookup"><span data-stu-id="ace2e-114">If you wish to hide the base class member with a new member in the derived class, use the [Shadows](../language-reference/modifiers/shadows.md) keyword instead of `Overloads`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="5bd3b-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="5bd3b-115">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ace2e-115">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ace2e-115">See also</span></span>
 
-- [<span data-ttu-id="5bd3b-116">Overload della routine</span><span class="sxs-lookup"><span data-stu-id="5bd3b-116">Procedure Overloading</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-overloading.md)
-- [<span data-ttu-id="5bd3b-117">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="5bd3b-117">Inheritance Basics</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [<span data-ttu-id="ace2e-116">Overload della routine</span><span class="sxs-lookup"><span data-stu-id="ace2e-116">Procedure Overloading</span></span>](../programming-guide/language-features/procedures/procedure-overloading.md)
+- [<span data-ttu-id="ace2e-117">Nozioni fondamentali sull'ereditarietà</span><span class="sxs-lookup"><span data-stu-id="ace2e-117">Inheritance Basics</span></span>](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
