--- a/docs/visual-basic/misc/bc30125.md
+++ b/docs/visual-basic/misc/bc30125.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30125
 ms.assetid: c2b18086-9cd9-4094-b9a9-491c8d617096
-ms.openlocfilehash: ab0826fe93d0b7daf803354aedcf376d291a643f
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 25d69b9303b6f54d5075e6694df0c39577c5273a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61682859"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380224"
 ---
-# <a name="writeonly-property-must-provide-a-set"></a><span data-ttu-id="34e8d-102">La proprietà 'WriteOnly' deve fornire un 'Set'</span><span class="sxs-lookup"><span data-stu-id="34e8d-102">'WriteOnly' property must provide a 'Set'</span></span>
-<span data-ttu-id="34e8d-103">Se una proprietà viene dichiarata come `WriteOnly`, deve fornire una routine per la scrittura del relativo valore.</span><span class="sxs-lookup"><span data-stu-id="34e8d-103">If a property is declared as `WriteOnly`, it must supply a procedure for writing its value.</span></span>  
+# <a name="writeonly-property-must-provide-a-set"></a><span data-ttu-id="97813-102">La proprietà 'WriteOnly' deve fornire un 'Set'</span><span class="sxs-lookup"><span data-stu-id="97813-102">'WriteOnly' property must provide a 'Set'</span></span>
+<span data-ttu-id="97813-103">Se una proprietà viene dichiarata come `WriteOnly`, deve fornire una routine per la scrittura del relativo valore.</span><span class="sxs-lookup"><span data-stu-id="97813-103">If a property is declared as `WriteOnly`, it must supply a procedure for writing its value.</span></span>  
   
- <span data-ttu-id="34e8d-104">**ID errore:** BC30125</span><span class="sxs-lookup"><span data-stu-id="34e8d-104">**Error ID:** BC30125</span></span>  
+ <span data-ttu-id="97813-104">**ID errore:** BC30125</span><span class="sxs-lookup"><span data-stu-id="97813-104">**Error ID:** BC30125</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="34e8d-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="34e8d-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="97813-105">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="97813-105">To correct this error</span></span>  
   
-1. <span data-ttu-id="34e8d-106">Assicurarsi di includere una routine `Set` tra le istruzioni `Property` e `End Property` .</span><span class="sxs-lookup"><span data-stu-id="34e8d-106">Make sure you include a `Set` procedure between the `Property` statement and the `End Property` statement.</span></span>  
+1. <span data-ttu-id="97813-106">Assicurarsi di includere una routine `Set` tra le istruzioni `Property` e `End Property` .</span><span class="sxs-lookup"><span data-stu-id="97813-106">Make sure you include a `Set` procedure between the `Property` statement and the `End Property` statement.</span></span>  
   
-2. <span data-ttu-id="34e8d-107">Verificare che le altre routine all'interno della dichiarazione `Property` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="34e8d-107">Verify that other procedures within the `Property` declaration are correctly terminated.</span></span>  
+2. <span data-ttu-id="97813-107">Verificare che le altre routine all'interno della dichiarazione `Property` vengano terminate correttamente.</span><span class="sxs-lookup"><span data-stu-id="97813-107">Verify that other procedures within the `Property` declaration are correctly terminated.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="34e8d-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="34e8d-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="97813-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="97813-108">See also</span></span>
 
-- [<span data-ttu-id="34e8d-109">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="34e8d-109">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
-- [<span data-ttu-id="34e8d-110">Istruzione Set</span><span class="sxs-lookup"><span data-stu-id="34e8d-110">Set Statement</span></span>](../../visual-basic/language-reference/statements/set-statement.md)
+- [<span data-ttu-id="97813-109">Property Statement</span><span class="sxs-lookup"><span data-stu-id="97813-109">Property Statement</span></span>](../language-reference/statements/property-statement.md)
+- [<span data-ttu-id="97813-110">Istruzione set</span><span class="sxs-lookup"><span data-stu-id="97813-110">Set Statement</span></span>](../language-reference/statements/set-statement.md)
