--- a/docs/visual-basic/misc/bc30132.md
+++ b/docs/visual-basic/misc/bc30132.md
@@ -1,5 +1,5 @@
 ---
-title: Etichetta '<labelname>' non è definito
+title: Etichetta '<labelname>' non definita
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30132
@@ -7,24 +7,24 @@ f1_keywords:
 helpviewer_keywords:
 - BC30132
 ms.assetid: 3a7be2ea-7e10-4ac6-921a-d094b41e9142
-ms.openlocfilehash: 9bc2270df76c1da7c38ce42dc8616e7a26ed7f7c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 8102a1216703682356e4e5906695b4166f638ad3
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64606363"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84380081"
 ---
-# <a name="label-labelname-is-not-defined"></a><span data-ttu-id="37cdf-102">Etichetta '\<NomeEtichetta >' non è definito</span><span class="sxs-lookup"><span data-stu-id="37cdf-102">Label '\<labelname>' is not defined</span></span>
-<span data-ttu-id="37cdf-103">Viene fatto riferimento a un'etichetta di riga o un numero di riga, che tuttavia non è definito dell'ambito del riferimento.</span><span class="sxs-lookup"><span data-stu-id="37cdf-103">A line label or line number is referred to but not defined within the scope of the reference.</span></span> <span data-ttu-id="37cdf-104">L'etichetta deve essere all'interno della routine che contiene il riferimento.</span><span class="sxs-lookup"><span data-stu-id="37cdf-104">The label must be within the procedure that contains the reference.</span></span>  
+# <a name="label-labelname-is-not-defined"></a><span data-ttu-id="8e4d8-102">Etichetta '\<labelname>' non definita</span><span class="sxs-lookup"><span data-stu-id="8e4d8-102">Label '\<labelname>' is not defined</span></span>
+<span data-ttu-id="8e4d8-103">Viene fatto riferimento a un'etichetta di riga o un numero di riga, che tuttavia non è definito dell'ambito del riferimento.</span><span class="sxs-lookup"><span data-stu-id="8e4d8-103">A line label or line number is referred to but not defined within the scope of the reference.</span></span> <span data-ttu-id="8e4d8-104">L'etichetta deve essere all'interno della routine che contiene il riferimento.</span><span class="sxs-lookup"><span data-stu-id="8e4d8-104">The label must be within the procedure that contains the reference.</span></span>  
   
- <span data-ttu-id="37cdf-105">**ID errore:** BC30132</span><span class="sxs-lookup"><span data-stu-id="37cdf-105">**Error ID:** BC30132</span></span>  
+ <span data-ttu-id="8e4d8-105">**ID errore:** BC30132</span><span class="sxs-lookup"><span data-stu-id="8e4d8-105">**Error ID:** BC30132</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="37cdf-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="37cdf-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="8e4d8-106">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="8e4d8-106">To correct this error</span></span>  
   
-- <span data-ttu-id="37cdf-107">Ristrutturare il codice in modo che l'etichetta di riga e il riferimento siano nella stessa routine.</span><span class="sxs-lookup"><span data-stu-id="37cdf-107">Restructure the code so the line label and the reference are in the same procedure.</span></span>  
+- <span data-ttu-id="8e4d8-107">Ristrutturare il codice in modo che l'etichetta di riga e il riferimento siano nella stessa routine.</span><span class="sxs-lookup"><span data-stu-id="8e4d8-107">Restructure the code so the line label and the reference are in the same procedure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="37cdf-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="37cdf-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="8e4d8-108">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="8e4d8-108">See also</span></span>
 
-- [<span data-ttu-id="37cdf-109">Istruzione Property</span><span class="sxs-lookup"><span data-stu-id="37cdf-109">Property Statement</span></span>](../../visual-basic/language-reference/statements/property-statement.md)
-- [<span data-ttu-id="37cdf-110">Routine</span><span class="sxs-lookup"><span data-stu-id="37cdf-110">Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/index.md)
-- [<span data-ttu-id="37cdf-111">Procedura: etichettare le istruzioni</span><span class="sxs-lookup"><span data-stu-id="37cdf-111">How to: Label Statements</span></span>](../../visual-basic/programming-guide/program-structure/how-to-label-statements.md)
+- [<span data-ttu-id="8e4d8-109">Property Statement</span><span class="sxs-lookup"><span data-stu-id="8e4d8-109">Property Statement</span></span>](../language-reference/statements/property-statement.md)
+- [<span data-ttu-id="8e4d8-110">Procedure</span><span class="sxs-lookup"><span data-stu-id="8e4d8-110">Procedures</span></span>](../programming-guide/language-features/procedures/index.md)
+- [<span data-ttu-id="8e4d8-111">Procedura: Etichettare le istruzioni</span><span class="sxs-lookup"><span data-stu-id="8e4d8-111">How to: Label Statements</span></span>](../programming-guide/program-structure/how-to-label-statements.md)
