--- a/docs/visual-basic/misc/bc32509.md
+++ b/docs/visual-basic/misc/bc32509.md
@@ -1,5 +1,5 @@
 ---
-title: Impossibile applicare 'ComClassAttribute' a '<classname>' perché non è dichiarato 'Public'
+title: Impossibile applicare 'Microsoft.VisualBasic.ComClassAttribute' a '<classname>' perché non è dichiarato 'Public'
 ms.date: 07/20/2015
 f1_keywords:
 - bc32509
@@ -7,36 +7,36 @@ f1_keywords:
 helpviewer_keywords:
 - BC32509
 ms.assetid: ac46851f-53ab-4ce6-87b1-4c4d29508527
-ms.openlocfilehash: 92703b8baaf833e81aca89795c8eb3067fb835ae
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 3aef273464a998a7ef013189afe1b7b3a05f1d1a
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64593102"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385652"
 ---
-# <a name="microsoftvisualbasiccomclassattribute-cannot-be-applied-to-classname-because-it-is-not-declared-public"></a><span data-ttu-id="ad878-102">Impossibile applicare 'ComClassAttribute' a '\<NomeClasse >' perché non è dichiarato 'Public'</span><span class="sxs-lookup"><span data-stu-id="ad878-102">'Microsoft.VisualBasic.ComClassAttribute' cannot be applied to '\<classname>' because it is not declared 'Public'</span></span>
-<span data-ttu-id="ad878-103">Una classe viene dichiarata con <xref:Microsoft.VisualBasic.ComClassAttribute>, ma la relativa dichiarazione non specifica `Public`.</span><span class="sxs-lookup"><span data-stu-id="ad878-103">A class is declared with <xref:Microsoft.VisualBasic.ComClassAttribute>, but its declaration does not specify `Public`.</span></span>  
+# <a name="microsoftvisualbasiccomclassattribute-cannot-be-applied-to-classname-because-it-is-not-declared-public"></a><span data-ttu-id="ee19b-102">Impossibile applicare 'Microsoft.VisualBasic.ComClassAttribute' a '\<classname>' perché non è dichiarato 'Public'</span><span class="sxs-lookup"><span data-stu-id="ee19b-102">'Microsoft.VisualBasic.ComClassAttribute' cannot be applied to '\<classname>' because it is not declared 'Public'</span></span>
+<span data-ttu-id="ee19b-103">Una classe viene dichiarata con <xref:Microsoft.VisualBasic.ComClassAttribute>, ma la relativa dichiarazione non specifica `Public`.</span><span class="sxs-lookup"><span data-stu-id="ee19b-103">A class is declared with <xref:Microsoft.VisualBasic.ComClassAttribute>, but its declaration does not specify `Public`.</span></span>  
   
- <span data-ttu-id="ad878-104">Per essere idonea per l'interoperabilità COM, una classe .NET Framework deve soddisfare i requisiti seguenti:</span><span class="sxs-lookup"><span data-stu-id="ad878-104">To be eligible for COM interop, a .NET Framework class must satisfy the following requirements:</span></span>  
+ <span data-ttu-id="ee19b-104">Per essere idonea per l'interoperabilità COM, una classe .NET Framework deve soddisfare i requisiti seguenti:</span><span class="sxs-lookup"><span data-stu-id="ee19b-104">To be eligible for COM interop, a .NET Framework class must satisfy the following requirements:</span></span>  
   
-- <span data-ttu-id="ad878-105">Deve essere `Public`, tutti i relativi contenitori devono essere `Public`e deve esporre almeno un membro `Public` .</span><span class="sxs-lookup"><span data-stu-id="ad878-105">It must be `Public`, all its containers must be `Public`, and it must expose at least one `Public` member.</span></span>  
+- <span data-ttu-id="ee19b-105">Deve essere `Public`, tutti i relativi contenitori devono essere `Public`e deve esporre almeno un membro `Public` .</span><span class="sxs-lookup"><span data-stu-id="ee19b-105">It must be `Public`, all its containers must be `Public`, and it must expose at least one `Public` member.</span></span>  
   
-- <span data-ttu-id="ad878-106">Non deve essere *astratta*, vale a dire non deve essere dichiarata con `MustInherit`.</span><span class="sxs-lookup"><span data-stu-id="ad878-106">It must not be *abstract*, that is, it must not be declared with `MustInherit`.</span></span>  
+- <span data-ttu-id="ee19b-106">Non deve essere *astratta*, vale a dire non deve essere dichiarata con `MustInherit`.</span><span class="sxs-lookup"><span data-stu-id="ee19b-106">It must not be *abstract*, that is, it must not be declared with `MustInherit`.</span></span>  
   
-- <span data-ttu-id="ad878-107">Non deve essere generica o essere dichiarata all'interno di un tipo di contenitore generico.</span><span class="sxs-lookup"><span data-stu-id="ad878-107">It must not be generic or be declared within a generic container type.</span></span>  
+- <span data-ttu-id="ee19b-107">Non deve essere generica o essere dichiarata all'interno di un tipo di contenitore generico.</span><span class="sxs-lookup"><span data-stu-id="ee19b-107">It must not be generic or be declared within a generic container type.</span></span>  
   
- <span data-ttu-id="ad878-108">**ID errore:** BC32509</span><span class="sxs-lookup"><span data-stu-id="ad878-108">**Error ID:** BC32509</span></span>  
+ <span data-ttu-id="ee19b-108">**ID errore:** BC32509</span><span class="sxs-lookup"><span data-stu-id="ee19b-108">**Error ID:** BC32509</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ad878-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ad878-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ee19b-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="ee19b-109">To correct this error</span></span>  
   
-- <span data-ttu-id="ad878-110">Aggiungere la parola chiave `Public` alla dichiarazione di classe.</span><span class="sxs-lookup"><span data-stu-id="ad878-110">Add the `Public` keyword to the class declaration.</span></span>  
+- <span data-ttu-id="ee19b-110">Aggiungere la parola chiave `Public` alla dichiarazione di classe.</span><span class="sxs-lookup"><span data-stu-id="ee19b-110">Add the `Public` keyword to the class declaration.</span></span>  
   
-     <span data-ttu-id="ad878-111">-oppure-</span><span class="sxs-lookup"><span data-stu-id="ad878-111">-or-</span></span>  
+     <span data-ttu-id="ee19b-111">-oppure-</span><span class="sxs-lookup"><span data-stu-id="ee19b-111">-or-</span></span>  
   
-- <span data-ttu-id="ad878-112">Se la classe o il relativo elemento contenitore non può essere `Public`, rimuovere <xref:Microsoft.VisualBasic.ComClassAttribute> dalla dichiarazione di classe.</span><span class="sxs-lookup"><span data-stu-id="ad878-112">If the class or its containing element cannot be `Public`, then remove <xref:Microsoft.VisualBasic.ComClassAttribute> from the class declaration.</span></span> <span data-ttu-id="ad878-113">Non è possibile esporla a COM.</span><span class="sxs-lookup"><span data-stu-id="ad878-113">You cannot expose it to COM.</span></span>  
+- <span data-ttu-id="ee19b-112">Se la classe o il relativo elemento contenitore non può essere `Public`, rimuovere <xref:Microsoft.VisualBasic.ComClassAttribute> dalla dichiarazione di classe.</span><span class="sxs-lookup"><span data-stu-id="ee19b-112">If the class or its containing element cannot be `Public`, then remove <xref:Microsoft.VisualBasic.ComClassAttribute> from the class declaration.</span></span> <span data-ttu-id="ee19b-113">Non è possibile esporla a COM.</span><span class="sxs-lookup"><span data-stu-id="ee19b-113">You cannot expose it to COM.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ad878-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ad878-114">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="ee19b-114">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="ee19b-114">See also</span></span>
 
 - <xref:Microsoft.VisualBasic.ComClassAttribute>
-- [<span data-ttu-id="ad878-115">Interoperabilità COM</span><span class="sxs-lookup"><span data-stu-id="ad878-115">COM Interop</span></span>](../../visual-basic/programming-guide/com-interop/index.md)
-- [<span data-ttu-id="ad878-116">Public</span><span class="sxs-lookup"><span data-stu-id="ad878-116">Public</span></span>](../../visual-basic/language-reference/modifiers/public.md)
+- [<span data-ttu-id="ee19b-115">Interoperabilità COM</span><span class="sxs-lookup"><span data-stu-id="ee19b-115">COM Interop</span></span>](../programming-guide/com-interop/index.md)
+- [<span data-ttu-id="ee19b-116">Pubblica</span><span class="sxs-lookup"><span data-stu-id="ee19b-116">Public</span></span>](../language-reference/modifiers/public.md)
