--- a/docs/visual-basic/misc/bc33041.md
+++ b/docs/visual-basic/misc/bc33041.md
@@ -1,5 +1,5 @@
 ---
-title: Operatore '<operator>' deve avere un secondo parametro di tipo 'Integer'
+title: L'operatore '<operator>' deve avere un secondo parametro di tipo 'Integer'
 ms.date: 07/20/2015
 f1_keywords:
 - BC33041
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC33041
 ms.assetid: 5cd56f6d-2f0f-49de-a8e6-59bdb57bdb1d
-ms.openlocfilehash: 257267c9c7839da8780522f2d37a3bd1f772401e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 23d7d2bb6d4492fad0a3656f628861dcd306a965
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64626554"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84379445"
 ---
-# <a name="operator-operator-must-have-a-second-parameter-of-type-integer"></a><span data-ttu-id="204cd-102">Operatore '\<operatore >' deve avere un secondo parametro di tipo 'Integer'</span><span class="sxs-lookup"><span data-stu-id="204cd-102">Operator '\<operator>' must have a second parameter of type 'Integer'</span></span>
-<span data-ttu-id="204cd-103">È stato dichiarato un operatore di spostamento di bit con un secondo parametro di tipo diverso da `Integer`.</span><span class="sxs-lookup"><span data-stu-id="204cd-103">A bit-shift operator is declared with the second parameter of a type other than `Integer`.</span></span>  
+# <a name="operator-operator-must-have-a-second-parameter-of-type-integer"></a><span data-ttu-id="a748a-102">L'operatore '\<operator>' deve avere un secondo parametro di tipo 'Integer'</span><span class="sxs-lookup"><span data-stu-id="a748a-102">Operator '\<operator>' must have a second parameter of type 'Integer'</span></span>
+<span data-ttu-id="a748a-103">È stato dichiarato un operatore di spostamento di bit con un secondo parametro di tipo diverso da `Integer`.</span><span class="sxs-lookup"><span data-stu-id="a748a-103">A bit-shift operator is declared with the second parameter of a type other than `Integer`.</span></span>  
   
- <span data-ttu-id="204cd-104">Quando si usa l'operatore di spostamento a destra (`>>`) o di spostamento a sinistra (`<<`) in un'espressione, l'entità dello spostamento deve essere specificata nel secondo operando.</span><span class="sxs-lookup"><span data-stu-id="204cd-104">When you use the right shift (`>>`) or left shift (`<<`) operator in an expression, you specify the shift amount in the second operand.</span></span> <span data-ttu-id="204cd-105">Per questo operando, Visual Basic consente di specificare qualsiasi tipo di dati che si amplia in `Integer`.</span><span class="sxs-lookup"><span data-stu-id="204cd-105">For this operand, Visual Basic allows you to supply any data type that widens to `Integer`.</span></span> <span data-ttu-id="204cd-106">La definizione del secondo operando, tuttavia, è rigorosamente `Integer`.</span><span class="sxs-lookup"><span data-stu-id="204cd-106">However, the definition of the second operand is strictly `Integer`.</span></span> <span data-ttu-id="204cd-107">Se si definisce una classe o una struttura con un operatore di spostamento di bit su di essa, nella definizione è necessario specificare `Integer` per il secondo operando.</span><span class="sxs-lookup"><span data-stu-id="204cd-107">If you define a class or structure with a bit-shift operator on that class or structure, your definition must specify `Integer` for the second operand.</span></span>  
+ <span data-ttu-id="a748a-104">Quando si usa l'operatore di spostamento a destra (`>>`) o di spostamento a sinistra (`<<`) in un'espressione, l'entità dello spostamento deve essere specificata nel secondo operando.</span><span class="sxs-lookup"><span data-stu-id="a748a-104">When you use the right shift (`>>`) or left shift (`<<`) operator in an expression, you specify the shift amount in the second operand.</span></span> <span data-ttu-id="a748a-105">Per questo operando, Visual Basic consente di fornire qualsiasi tipo di dati che si amplia a `Integer` .</span><span class="sxs-lookup"><span data-stu-id="a748a-105">For this operand, Visual Basic allows you to supply any data type that widens to `Integer`.</span></span> <span data-ttu-id="a748a-106">La definizione del secondo operando, tuttavia, è rigorosamente `Integer`.</span><span class="sxs-lookup"><span data-stu-id="a748a-106">However, the definition of the second operand is strictly `Integer`.</span></span> <span data-ttu-id="a748a-107">Se si definisce una classe o una struttura con un operatore di spostamento di bit su di essa, nella definizione è necessario specificare `Integer` per il secondo operando.</span><span class="sxs-lookup"><span data-stu-id="a748a-107">If you define a class or structure with a bit-shift operator on that class or structure, your definition must specify `Integer` for the second operand.</span></span>  
   
- <span data-ttu-id="204cd-108">**ID errore:** BC33041</span><span class="sxs-lookup"><span data-stu-id="204cd-108">**Error ID:** BC33041</span></span>  
+ <span data-ttu-id="a748a-108">**ID errore:** BC33041</span><span class="sxs-lookup"><span data-stu-id="a748a-108">**Error ID:** BC33041</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="204cd-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="204cd-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a748a-109">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a748a-109">To correct this error</span></span>  
   
-- <span data-ttu-id="204cd-110">Cambiare la definizione dell'operatore di spostamento di bit in modo che venga restituito un valore `Integer` .</span><span class="sxs-lookup"><span data-stu-id="204cd-110">Change the definition of the bit-shift operator to return an `Integer` value.</span></span>  
+- <span data-ttu-id="a748a-110">Cambiare la definizione dell'operatore di spostamento di bit in modo che venga restituito un valore `Integer` .</span><span class="sxs-lookup"><span data-stu-id="a748a-110">Change the definition of the bit-shift operator to return an `Integer` value.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="204cd-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="204cd-111">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="a748a-111">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a748a-111">See also</span></span>
 
-- [<span data-ttu-id="204cd-112">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="204cd-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [<span data-ttu-id="204cd-113">Istruzione Operator</span><span class="sxs-lookup"><span data-stu-id="204cd-113">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
-- [<span data-ttu-id="204cd-114">Procedura: Definire un operatore</span><span class="sxs-lookup"><span data-stu-id="204cd-114">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [<span data-ttu-id="204cd-115">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="204cd-115">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
-- [<span data-ttu-id="204cd-116">Operatori di spostamento bit</span><span class="sxs-lookup"><span data-stu-id="204cd-116">Bit Shift Operators</span></span>](../../visual-basic/language-reference/operators/bit-shift-operators.md)
+- [<span data-ttu-id="a748a-112">Routine di operatore</span><span class="sxs-lookup"><span data-stu-id="a748a-112">Operator Procedures</span></span>](../programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="a748a-113">Operator Statement</span><span class="sxs-lookup"><span data-stu-id="a748a-113">Operator Statement</span></span>](../language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="a748a-114">Procedura: definire un operatore</span><span class="sxs-lookup"><span data-stu-id="a748a-114">How to: Define an Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="a748a-115">Procedura: Definire un operatore di conversione</span><span class="sxs-lookup"><span data-stu-id="a748a-115">How to: Define a Conversion Operator</span></span>](../programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [<span data-ttu-id="a748a-116">Operatori di spostamento bit</span><span class="sxs-lookup"><span data-stu-id="a748a-116">Bit Shift Operators</span></span>](../language-reference/operators/bit-shift-operators.md)
