--- a/docs/visual-basic/misc/bc36557.md
+++ b/docs/visual-basic/misc/bc36557.md
@@ -1,5 +1,5 @@
 ---
-title: "'<membername>' non è<contextname>un membro di ' '; non esiste nel contesto corrente"
+title: "' <membername> ' non è un membro di ' <contextname> ' e non esiste nel contesto corrente"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc36557
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36557
 ms.assetid: d8671f1c-d545-44da-89b3-7d892e01e8be
-ms.openlocfilehash: d35c52c279749ad451a11b0a1ac1c8c8d120139b
-ms.sourcegitcommit: 43d10ef65f0f1fd6c3b515e363bde11a3fcd8d6d
+ms.openlocfilehash: 8aa9967c332afeb9d31e6076feb7600853d44bac
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/04/2020
-ms.locfileid: "78266807"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378367"
 ---
-# <a name="membername-is-not-a-member-of-contextname-it-does-not-exist-in-the-current-context"></a><span data-ttu-id="e1da7-102">'\<nomemembro>' non è\<un membro di ' contextname>'; non esiste nel contesto corrente</span><span class="sxs-lookup"><span data-stu-id="e1da7-102">'\<membername>' is not a member of '\<contextname>'; it does not exist in the current context</span></span>
-<span data-ttu-id="e1da7-103">È stato assegnato un nome di membro inesistente a una proprietà in una dichiarazione di tipo anonimo.</span><span class="sxs-lookup"><span data-stu-id="e1da7-103">A non-existent member name has been assigned to a property in an anonymous type declaration.</span></span> <span data-ttu-id="e1da7-104">Nell'esempio seguente `.Prop1` e `.Prop2` sono le proprietà del tipo anonimo.</span><span class="sxs-lookup"><span data-stu-id="e1da7-104">In the following example, `.Prop1` and `.Prop2` are the properties of the anonymous type.</span></span> <span data-ttu-id="e1da7-105">Il tentativo di assegnare `.Prop3` a `.Prop2` provoca l'errore.</span><span class="sxs-lookup"><span data-stu-id="e1da7-105">The attempt to assign `.Prop3` to `.Prop2` causes the error.</span></span>  
+# <a name="membername-is-not-a-member-of-contextname-it-does-not-exist-in-the-current-context"></a><span data-ttu-id="2342a-102">' \<membername> ' non è un membro di ' \<contextname> ' e non esiste nel contesto corrente</span><span class="sxs-lookup"><span data-stu-id="2342a-102">'\<membername>' is not a member of '\<contextname>'; it does not exist in the current context</span></span>
+<span data-ttu-id="2342a-103">È stato assegnato un nome di membro inesistente a una proprietà in una dichiarazione di tipo anonimo.</span><span class="sxs-lookup"><span data-stu-id="2342a-103">A non-existent member name has been assigned to a property in an anonymous type declaration.</span></span> <span data-ttu-id="2342a-104">Nell'esempio seguente `.Prop1` e `.Prop2` sono le proprietà del tipo anonimo.</span><span class="sxs-lookup"><span data-stu-id="2342a-104">In the following example, `.Prop1` and `.Prop2` are the properties of the anonymous type.</span></span> <span data-ttu-id="2342a-105">Il tentativo di assegnare `.Prop3` a `.Prop2` provoca l'errore.</span><span class="sxs-lookup"><span data-stu-id="2342a-105">The attempt to assign `.Prop3` to `.Prop2` causes the error.</span></span>  
   
 ```vb  
 ' Not valid.  
@@ -26,13 +26,13 @@ Dim anon1 = New With {.Prop1 = 27, .Prop2 = .Prop3}
 Dim anon2 = New With {.Prop1 = 27, .Prop2 = .Prop1}  
 ```  
   
- <span data-ttu-id="e1da7-106">**ID errore:** BC36657</span><span class="sxs-lookup"><span data-stu-id="e1da7-106">**Error ID:** BC36657</span></span>  
+ <span data-ttu-id="2342a-106">**ID errore:** BC36657</span><span class="sxs-lookup"><span data-stu-id="2342a-106">**Error ID:** BC36657</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e1da7-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="e1da7-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2342a-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="2342a-107">To correct this error</span></span>  
   
-- <span data-ttu-id="e1da7-108">Esaminare il codice per stabilire cosa si vuole assegnare.</span><span class="sxs-lookup"><span data-stu-id="e1da7-108">Examine your code to determine what you want to assign.</span></span> <span data-ttu-id="e1da7-109">Il nome della variabile potrebbe essere digitato in modo non corretto o richiedere qualificazione se si tratta di una proprietà di un altro oggetto.</span><span class="sxs-lookup"><span data-stu-id="e1da7-109">The variable name might be misspelled, or it might require qualification if it is a property of another object.</span></span>  
+- <span data-ttu-id="2342a-108">Esaminare il codice per stabilire cosa si vuole assegnare.</span><span class="sxs-lookup"><span data-stu-id="2342a-108">Examine your code to determine what you want to assign.</span></span> <span data-ttu-id="2342a-109">Il nome della variabile potrebbe essere digitato in modo non corretto o richiedere qualificazione se si tratta di una proprietà di un altro oggetto.</span><span class="sxs-lookup"><span data-stu-id="2342a-109">The variable name might be misspelled, or it might require qualification if it is a property of another object.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e1da7-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="e1da7-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="2342a-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="2342a-110">See also</span></span>
 
-- [<span data-ttu-id="e1da7-111">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="e1da7-111">Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
-- [<span data-ttu-id="e1da7-112">Procedura: dedurre tipi e nomi di proprietà nelle dichiarazioni di tipo anonimo</span><span class="sxs-lookup"><span data-stu-id="e1da7-112">How to: Infer Property Names and Types in Anonymous Type Declarations</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
+- [<span data-ttu-id="2342a-111">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="2342a-111">Anonymous Types</span></span>](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [<span data-ttu-id="2342a-112">Procedura: dedurre tipi e nomi di proprietà nelle dichiarazioni di tipo anonimo</span><span class="sxs-lookup"><span data-stu-id="2342a-112">How to: Infer Property Names and Types in Anonymous Type Declarations</span></span>](../programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
