--- a/docs/visual-basic/misc/bc36560.md
+++ b/docs/visual-basic/misc/bc36560.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36560
 ms.assetid: 70eee559-d6fc-409b-b835-2c84511b160e
-ms.openlocfilehash: cd8b41da91e437f8af1c61b57078e96488f02880
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c74f4e5a86459ef5b7bed7a766aff7ad63720305
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64666155"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84378263"
 ---
-# <a name="type-characters-cannot-be-used-in-anonymous-type-declarations"></a><span data-ttu-id="1cea1-102">Non è possibile usare i caratteri tipo nelle dichiarazioni di tipo anonimo</span><span class="sxs-lookup"><span data-stu-id="1cea1-102">Type characters cannot be used in anonymous type declarations</span></span>
-<span data-ttu-id="1cea1-103">Quando si dichiara un'istanza di un tipo anonimo, non è possibile usare un carattere tipo in un nome di proprietà.</span><span class="sxs-lookup"><span data-stu-id="1cea1-103">You cannot use a type character on a property name when you declare an instance of an anonymous type.</span></span> <span data-ttu-id="1cea1-104">Il tipo di dati della proprietà viene dedotto dal valore assegnato a esso.</span><span class="sxs-lookup"><span data-stu-id="1cea1-104">The data type of the property is inferred from the value assigned to it.</span></span> <span data-ttu-id="1cea1-105">Ad esempio, le dichiarazioni seguenti non sono valide.</span><span class="sxs-lookup"><span data-stu-id="1cea1-105">For example, the following declarations are not valid.</span></span>  
+# <a name="type-characters-cannot-be-used-in-anonymous-type-declarations"></a><span data-ttu-id="4f85e-102">Non è possibile usare i caratteri tipo nelle dichiarazioni di tipo anonimo</span><span class="sxs-lookup"><span data-stu-id="4f85e-102">Type characters cannot be used in anonymous type declarations</span></span>
+<span data-ttu-id="4f85e-103">Quando si dichiara un'istanza di un tipo anonimo, non è possibile usare un carattere tipo in un nome di proprietà.</span><span class="sxs-lookup"><span data-stu-id="4f85e-103">You cannot use a type character on a property name when you declare an instance of an anonymous type.</span></span> <span data-ttu-id="4f85e-104">Il tipo di dati della proprietà viene dedotto dal valore assegnato a esso.</span><span class="sxs-lookup"><span data-stu-id="4f85e-104">The data type of the property is inferred from the value assigned to it.</span></span> <span data-ttu-id="4f85e-105">Ad esempio, le dichiarazioni seguenti non sono valide.</span><span class="sxs-lookup"><span data-stu-id="4f85e-105">For example, the following declarations are not valid.</span></span>  
   
 ```vb  
 '' Not valid.  
@@ -23,11 +23,11 @@ ms.locfileid: "64666155"
 'Dim anon2 = New With {.ID$ = 42}  
 ```  
   
- <span data-ttu-id="1cea1-106">**ID errore:** BC36560</span><span class="sxs-lookup"><span data-stu-id="1cea1-106">**Error ID:** BC36560</span></span>  
+ <span data-ttu-id="4f85e-106">**ID errore:** BC36560</span><span class="sxs-lookup"><span data-stu-id="4f85e-106">**Error ID:** BC36560</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="1cea1-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="1cea1-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4f85e-107">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4f85e-107">To correct this error</span></span>  
   
-- <span data-ttu-id="1cea1-108">Rimuovere il tipo di carattere dall'elenco di inizializzatori.</span><span class="sxs-lookup"><span data-stu-id="1cea1-108">Remove the type character from the initializer list.</span></span> <span data-ttu-id="1cea1-109">Se si vuole definire il tipo di dati desiderato per la proprietà, è possibile convertire esplicitamente il valore assegnato.</span><span class="sxs-lookup"><span data-stu-id="1cea1-109">You can explicitly convert the assigned value if this is necessary to establish the data type you want for the property.</span></span>  
+- <span data-ttu-id="4f85e-108">Rimuovere il tipo di carattere dall'elenco di inizializzatori.</span><span class="sxs-lookup"><span data-stu-id="4f85e-108">Remove the type character from the initializer list.</span></span> <span data-ttu-id="4f85e-109">Se si vuole definire il tipo di dati desiderato per la proprietà, è possibile convertire esplicitamente il valore assegnato.</span><span class="sxs-lookup"><span data-stu-id="4f85e-109">You can explicitly convert the assigned value if this is necessary to establish the data type you want for the property.</span></span>  
   
 ```vb  
 ' Valid.  
@@ -35,8 +35,8 @@ Dim anon1 = New With {.ID = "abc"}
 Dim anon2 = New With {.ID = CStr(42)}  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="1cea1-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="1cea1-110">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4f85e-110">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4f85e-110">See also</span></span>
 
-- [<span data-ttu-id="1cea1-111">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="1cea1-111">Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
-- [<span data-ttu-id="1cea1-112">Procedura: Dedurre i nomi delle proprietà e i tipi nelle dichiarazioni di tipo anonimo</span><span class="sxs-lookup"><span data-stu-id="1cea1-112">How to: Infer Property Names and Types in Anonymous Type Declarations</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
-- [<span data-ttu-id="1cea1-113">Conversioni implicite ed esplicite</span><span class="sxs-lookup"><span data-stu-id="1cea1-113">Implicit and Explicit Conversions</span></span>](../../visual-basic/programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
+- [<span data-ttu-id="4f85e-111">Tipi anonimi</span><span class="sxs-lookup"><span data-stu-id="4f85e-111">Anonymous Types</span></span>](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [<span data-ttu-id="4f85e-112">Procedura: dedurre tipi e nomi di proprietà nelle dichiarazioni di tipo anonimo</span><span class="sxs-lookup"><span data-stu-id="4f85e-112">How to: Infer Property Names and Types in Anonymous Type Declarations</span></span>](../programming-guide/language-features/objects-and-classes/how-to-infer-property-names-and-types-in-anonymous-type-declarations.md)
+- [<span data-ttu-id="4f85e-113">Conversioni implicite ed esplicite</span><span class="sxs-lookup"><span data-stu-id="4f85e-113">Implicit and Explicit Conversions</span></span>](../programming-guide/language-features/data-types/implicit-and-explicit-conversions.md)
