--- a/docs/visual-basic/misc/bc36604.md
+++ b/docs/visual-basic/misc/bc36604.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC36604
 ms.assetid: 6fd66d12-8c99-46e0-9095-fe1b29fd2692
-ms.openlocfilehash: 5128d55b8a67906a68adf0157baa58ede0c8473a
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: daa2e1ef1b530a51f7fa9bcb051cdb27de550821
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61970755"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84385119"
 ---
-# <a name="late-binding-operations-cannot-be-converted-to-an-expression-tree"></a><span data-ttu-id="b9b9a-102">Impossibile convertire le operazioni di associazione tardiva in un albero delle espressioni</span><span class="sxs-lookup"><span data-stu-id="b9b9a-102">Late binding operations cannot be converted to an expression tree</span></span>
-<span data-ttu-id="b9b9a-103">Si è provato a convertire un'operazione di associazione tardiva in un albero delle espressioni.</span><span class="sxs-lookup"><span data-stu-id="b9b9a-103">An attempt has been made to convert a late binding operation into an expression tree.</span></span> <span data-ttu-id="b9b9a-104">Questa operazione non è valida.</span><span class="sxs-lookup"><span data-stu-id="b9b9a-104">This is not valid.</span></span> <span data-ttu-id="b9b9a-105">Il codice seguente, ad esempio, causa questo errore.</span><span class="sxs-lookup"><span data-stu-id="b9b9a-105">For example, the following code causes this error.</span></span>  
+# <a name="late-binding-operations-cannot-be-converted-to-an-expression-tree"></a><span data-ttu-id="10758-102">Impossibile convertire le operazioni di associazione tardiva in un albero delle espressioni</span><span class="sxs-lookup"><span data-stu-id="10758-102">Late binding operations cannot be converted to an expression tree</span></span>
+<span data-ttu-id="10758-103">Si è provato a convertire un'operazione di associazione tardiva in un albero delle espressioni.</span><span class="sxs-lookup"><span data-stu-id="10758-103">An attempt has been made to convert a late binding operation into an expression tree.</span></span> <span data-ttu-id="10758-104">Questa operazione non è valida.</span><span class="sxs-lookup"><span data-stu-id="10758-104">This is not valid.</span></span> <span data-ttu-id="10758-105">Il codice seguente, ad esempio, causa questo errore.</span><span class="sxs-lookup"><span data-stu-id="10758-105">For example, the following code causes this error.</span></span>  
   
 ```vb  
 Option Strict Off  
@@ -32,8 +32,8 @@ Module Module1
 End Module  
 ```  
   
- <span data-ttu-id="b9b9a-106">**ID errore:** BC36604</span><span class="sxs-lookup"><span data-stu-id="b9b9a-106">**Error ID:** BC36604</span></span>  
+ <span data-ttu-id="10758-106">**ID errore:** BC36604</span><span class="sxs-lookup"><span data-stu-id="10758-106">**Error ID:** BC36604</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="b9b9a-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="b9b9a-107">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="10758-107">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="10758-107">See also</span></span>
 
-- [<span data-ttu-id="b9b9a-108">Associazione anticipata e tardiva</span><span class="sxs-lookup"><span data-stu-id="b9b9a-108">Early and Late Binding</span></span>](../../visual-basic/programming-guide/language-features/early-late-binding/index.md)
+- [<span data-ttu-id="10758-108">Associazione anticipata e tardiva</span><span class="sxs-lookup"><span data-stu-id="10758-108">Early and Late Binding</span></span>](../programming-guide/language-features/early-late-binding/index.md)
