--- a/docs/visual-basic/misc/bc40022.md
+++ b/docs/visual-basic/misc/bc40022.md
@@ -1,5 +1,5 @@
 ---
-title: Membro '<membername1>'dichiara in modo implicito'<implicitmembername>', che è in conflitto con un membro nella classe base'<baseclassname>'
+title: Il membro ' <membername1> ' dichiara in modo implicito ' <implicitmembername> ', che è in conflitto con un membro nella classe base ' <baseclassname> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc40022
@@ -7,42 +7,42 @@ f1_keywords:
 helpviewer_keywords:
 - BC40022
 ms.assetid: be5bb2ee-2274-42b2-b843-179b14127b34
-ms.openlocfilehash: 11bb97d98c8ad94b7f2458a351afc64c11cb9fa1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 9fd1ceb81cc84e466a4fca1f65f820111b4687d4
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64624440"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84384339"
 ---
-# <a name="member-membername1-implicitly-declares-implicitmembername-which-conflicts-with-a-member-in-the-base-class-baseclassname"></a><span data-ttu-id="a67eb-102">Membro '\<membername1 >' dichiara in modo implicito '\<nomemembroimplicito > ', che è in conflitto con un membro nella classe base'\<nomeclassebase >'</span><span class="sxs-lookup"><span data-stu-id="a67eb-102">Member '\<membername1>' implicitly declares '\<implicitmembername>', which conflicts with a member in the base class '\<baseclassname>'</span></span>
-<span data-ttu-id="a67eb-103">Membro '\<membername1 >' dichiara in modo implicito '\<nomemembroimplicito > ', che è in conflitto con un membro nella classe base'\<nomeclassebase >', e in modo che il membro non deve essere dichiarato 'Overloads'</span><span class="sxs-lookup"><span data-stu-id="a67eb-103">Member '\<membername1>' implicitly declares '\<implicitmembername>', which conflicts with a member in the base class '\<baseclassname>', and so the member should not be declared 'Overloads'</span></span>  
+# <a name="member-membername1-implicitly-declares-implicitmembername-which-conflicts-with-a-member-in-the-base-class-baseclassname"></a><span data-ttu-id="4edfd-102">Il membro ' \<membername1> ' dichiara in modo implicito ' \<implicitmembername> ', che è in conflitto con un membro nella classe base ' \<baseclassname> '</span><span class="sxs-lookup"><span data-stu-id="4edfd-102">Member '\<membername1>' implicitly declares '\<implicitmembername>', which conflicts with a member in the base class '\<baseclassname>'</span></span>
+<span data-ttu-id="4edfd-103">Il membro ' \<membername1> ' dichiara in modo implicito ' \<implicitmembername> ', che è in conflitto con un membro nella classe base ' \<baseclassname> ', quindi il membro non deve essere dichiarato come ' Overloads '</span><span class="sxs-lookup"><span data-stu-id="4edfd-103">Member '\<membername1>' implicitly declares '\<implicitmembername>', which conflicts with a member in the base class '\<baseclassname>', and so the member should not be declared 'Overloads'</span></span>  
   
- <span data-ttu-id="a67eb-104">Una proprietà in una classe derivata genera un membro implicito con lo stesso nome di un membro della classe base e specifica la parola chiave [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) .</span><span class="sxs-lookup"><span data-stu-id="a67eb-104">A property in a derived class generates an implicit member with the same name as a member of the base class and specifies the [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) keyword.</span></span>  
+ <span data-ttu-id="4edfd-104">Una proprietà in una classe derivata genera un membro implicito con lo stesso nome di un membro della classe base e specifica la parola chiave [Overloads](../language-reference/modifiers/overloads.md) .</span><span class="sxs-lookup"><span data-stu-id="4edfd-104">A property in a derived class generates an implicit member with the same name as a member of the base class and specifies the [Overloads](../language-reference/modifiers/overloads.md) keyword.</span></span>  
   
- <span data-ttu-id="a67eb-105">L'overload viene usato per definire più versioni di una proprietà o routine tutte appartenenti alla stessa classe.</span><span class="sxs-lookup"><span data-stu-id="a67eb-105">Overloading is used to define multiple versions of a property or procedure all in the same class.</span></span> <span data-ttu-id="a67eb-106">Non è possibile definire un'ulteriore versione del membro di una classe base a meno che questo non specifichi già `Overloads`.</span><span class="sxs-lookup"><span data-stu-id="a67eb-106">You cannot define an additional version of a base class member unless that base class member already specifies `Overloads`.</span></span> <span data-ttu-id="a67eb-107">Dal momento che il membro della classe base in conflitto non specifica `Overloads`, il compilatore presuppone che questa proprietà [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) sia il membro della classe base implicita.</span><span class="sxs-lookup"><span data-stu-id="a67eb-107">Because the conflicting base class member does not specify `Overloads`, the compiler assumes that this property [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) the implicit base class member.</span></span>  
+ <span data-ttu-id="4edfd-105">L'overload viene usato per definire più versioni di una proprietà o routine tutte appartenenti alla stessa classe.</span><span class="sxs-lookup"><span data-stu-id="4edfd-105">Overloading is used to define multiple versions of a property or procedure all in the same class.</span></span> <span data-ttu-id="4edfd-106">Non è possibile definire un'ulteriore versione del membro di una classe base a meno che questo non specifichi già `Overloads`.</span><span class="sxs-lookup"><span data-stu-id="4edfd-106">You cannot define an additional version of a base class member unless that base class member already specifies `Overloads`.</span></span> <span data-ttu-id="4edfd-107">Dal momento che il membro della classe base in conflitto non specifica `Overloads`, il compilatore presuppone che questa proprietà [Shadows](../language-reference/modifiers/shadows.md) sia il membro della classe base implicita.</span><span class="sxs-lookup"><span data-stu-id="4edfd-107">Because the conflicting base class member does not specify `Overloads`, the compiler assumes that this property [Shadows](../language-reference/modifiers/shadows.md) the implicit base class member.</span></span>  
   
- <span data-ttu-id="a67eb-108">Il compilatore Visual Basic crea membri impliciti corrispondenti a determinati elementi di programmazione dichiarati.</span><span class="sxs-lookup"><span data-stu-id="a67eb-108">The Visual Basic compiler creates implicit members corresponding to certain programming elements you declare.</span></span> <span data-ttu-id="a67eb-109">La tabella seguente riepiloga questi membri impliciti o *sintetici*.</span><span class="sxs-lookup"><span data-stu-id="a67eb-109">The following table summarizes these implicit, or *synthetic*, members.</span></span>  
+ <span data-ttu-id="4edfd-108">Il compilatore Visual Basic crea membri impliciti corrispondenti a determinati elementi di programmazione dichiarati.</span><span class="sxs-lookup"><span data-stu-id="4edfd-108">The Visual Basic compiler creates implicit members corresponding to certain programming elements you declare.</span></span> <span data-ttu-id="4edfd-109">La tabella seguente riepiloga questi membri impliciti o *sintetici*.</span><span class="sxs-lookup"><span data-stu-id="4edfd-109">The following table summarizes these implicit, or *synthetic*, members.</span></span>  
   
-|<span data-ttu-id="a67eb-110">Elemento dichiarato</span><span class="sxs-lookup"><span data-stu-id="a67eb-110">Declared element</span></span>|<span data-ttu-id="a67eb-111">Membri creati in modo implicito</span><span class="sxs-lookup"><span data-stu-id="a67eb-111">Implicitly created members</span></span>|  
+|<span data-ttu-id="4edfd-110">Elemento dichiarato</span><span class="sxs-lookup"><span data-stu-id="4edfd-110">Declared element</span></span>|<span data-ttu-id="4edfd-111">Membri creati in modo implicito</span><span class="sxs-lookup"><span data-stu-id="4edfd-111">Implicitly created members</span></span>|  
 |----------------------|--------------------------------|  
-|<span data-ttu-id="a67eb-112">Enumerazione</span><span class="sxs-lookup"><span data-stu-id="a67eb-112">Enumeration</span></span>|<span data-ttu-id="a67eb-113">Membro`value__` </span><span class="sxs-lookup"><span data-stu-id="a67eb-113">`value__` member</span></span>|  
-|<span data-ttu-id="a67eb-114">event</span><span class="sxs-lookup"><span data-stu-id="a67eb-114">Event</span></span>|<span data-ttu-id="a67eb-115">Routine`add_<eventname>` </span><span class="sxs-lookup"><span data-stu-id="a67eb-115">`add_<eventname>` procedure</span></span><br /><br /> <span data-ttu-id="a67eb-116">Routine`remove_<eventname>` </span><span class="sxs-lookup"><span data-stu-id="a67eb-116">`remove_<eventname>` procedure</span></span><br /><br /> <span data-ttu-id="a67eb-117">Campo di`<eventname>Event` </span><span class="sxs-lookup"><span data-stu-id="a67eb-117">`<eventname>Event` field</span></span><br /><br /> <span data-ttu-id="a67eb-118">Delegato`<eventname>EventHandler` </span><span class="sxs-lookup"><span data-stu-id="a67eb-118">`<eventname>EventHandler` delegate</span></span>|  
-|<span data-ttu-id="a67eb-119">Proprietà</span><span class="sxs-lookup"><span data-stu-id="a67eb-119">Property</span></span>|<span data-ttu-id="a67eb-120">Routine`get_<propertyname>` </span><span class="sxs-lookup"><span data-stu-id="a67eb-120">`get_<propertyname>` procedure</span></span><br /><br /> <span data-ttu-id="a67eb-121">Routine`set_<propertyname>` </span><span class="sxs-lookup"><span data-stu-id="a67eb-121">`set_<propertyname>` procedure</span></span>|  
-|<span data-ttu-id="a67eb-122">Membro`My.Form` , membro `My.WebService` , membro or member of a class marked with the <xref:Microsoft.VisualBasic.MyGroupCollectionAttribute> </span><span class="sxs-lookup"><span data-stu-id="a67eb-122">`My.Form` member, `My.WebService` member, or member of a class marked with the <xref:Microsoft.VisualBasic.MyGroupCollectionAttribute> attribute</span></span>|<span data-ttu-id="a67eb-123">Variabile`m_<variablename>` `Static` </span><span class="sxs-lookup"><span data-stu-id="a67eb-123">`m_<variablename>` `Static` variable</span></span><br /><br /> <span data-ttu-id="a67eb-124">Proprietà`<variablename>` </span><span class="sxs-lookup"><span data-stu-id="a67eb-124">`<variablename>` property</span></span><br /><br /> <span data-ttu-id="a67eb-125">Routine`get_<variablename>` </span><span class="sxs-lookup"><span data-stu-id="a67eb-125">`get_<variablename>` procedure</span></span><br /><br /> <span data-ttu-id="a67eb-126">Routine`set_<variablename>` </span><span class="sxs-lookup"><span data-stu-id="a67eb-126">`set_<variablename>` procedure</span></span>|  
-|<span data-ttu-id="a67eb-127">Variabile`WithEvents` </span><span class="sxs-lookup"><span data-stu-id="a67eb-127">`WithEvents` variable</span></span>|<span data-ttu-id="a67eb-128">Variabile `_<variablename>`</span><span class="sxs-lookup"><span data-stu-id="a67eb-128">`_<variablename>` variable</span></span><br /><br /> <span data-ttu-id="a67eb-129">Proprietà `<variablename>`</span><span class="sxs-lookup"><span data-stu-id="a67eb-129">`<variablename>` property</span></span><br /><br /> <span data-ttu-id="a67eb-130">Routine`get_<variablename>` </span><span class="sxs-lookup"><span data-stu-id="a67eb-130">`get_<variablename>` procedure</span></span><br /><br /> <span data-ttu-id="a67eb-131">Routine`set_<variablename>` </span><span class="sxs-lookup"><span data-stu-id="a67eb-131">`set_<variablename>` procedure</span></span>|  
+|<span data-ttu-id="4edfd-112">Enumerazione</span><span class="sxs-lookup"><span data-stu-id="4edfd-112">Enumeration</span></span>|<span data-ttu-id="4edfd-113">Membro`value__`</span><span class="sxs-lookup"><span data-stu-id="4edfd-113">`value__` member</span></span>|  
+|<span data-ttu-id="4edfd-114">Event</span><span class="sxs-lookup"><span data-stu-id="4edfd-114">Event</span></span>|<span data-ttu-id="4edfd-115">Routine`add_<eventname>`</span><span class="sxs-lookup"><span data-stu-id="4edfd-115">`add_<eventname>` procedure</span></span><br /><br /> <span data-ttu-id="4edfd-116">Routine`remove_<eventname>`</span><span class="sxs-lookup"><span data-stu-id="4edfd-116">`remove_<eventname>` procedure</span></span><br /><br /> <span data-ttu-id="4edfd-117">Campo di`<eventname>Event`</span><span class="sxs-lookup"><span data-stu-id="4edfd-117">`<eventname>Event` field</span></span><br /><br /> <span data-ttu-id="4edfd-118">Delegato`<eventname>EventHandler`</span><span class="sxs-lookup"><span data-stu-id="4edfd-118">`<eventname>EventHandler` delegate</span></span>|  
+|<span data-ttu-id="4edfd-119">Proprietà</span><span class="sxs-lookup"><span data-stu-id="4edfd-119">Property</span></span>|<span data-ttu-id="4edfd-120">Routine`get_<propertyname>`</span><span class="sxs-lookup"><span data-stu-id="4edfd-120">`get_<propertyname>` procedure</span></span><br /><br /> <span data-ttu-id="4edfd-121">Routine`set_<propertyname>`</span><span class="sxs-lookup"><span data-stu-id="4edfd-121">`set_<propertyname>` procedure</span></span>|  
+|<span data-ttu-id="4edfd-122">Membro`My.Form` , membro `My.WebService` , membro or member of a class marked with the <xref:Microsoft.VisualBasic.MyGroupCollectionAttribute></span><span class="sxs-lookup"><span data-stu-id="4edfd-122">`My.Form` member, `My.WebService` member, or member of a class marked with the <xref:Microsoft.VisualBasic.MyGroupCollectionAttribute> attribute</span></span>|<span data-ttu-id="4edfd-123">`m_<variablename>``Static`variabile</span><span class="sxs-lookup"><span data-stu-id="4edfd-123">`m_<variablename>` `Static` variable</span></span><br /><br /> <span data-ttu-id="4edfd-124">Proprietà `<variablename>`</span><span class="sxs-lookup"><span data-stu-id="4edfd-124">`<variablename>` property</span></span><br /><br /> <span data-ttu-id="4edfd-125">Routine`get_<variablename>`</span><span class="sxs-lookup"><span data-stu-id="4edfd-125">`get_<variablename>` procedure</span></span><br /><br /> <span data-ttu-id="4edfd-126">Routine`set_<variablename>`</span><span class="sxs-lookup"><span data-stu-id="4edfd-126">`set_<variablename>` procedure</span></span>|  
+|<span data-ttu-id="4edfd-127">Variabile</span><span class="sxs-lookup"><span data-stu-id="4edfd-127">`WithEvents` variable</span></span>|<span data-ttu-id="4edfd-128">Variabile</span><span class="sxs-lookup"><span data-stu-id="4edfd-128">`_<variablename>` variable</span></span><br /><br /> <span data-ttu-id="4edfd-129">Proprietà `<variablename>`</span><span class="sxs-lookup"><span data-stu-id="4edfd-129">`<variablename>` property</span></span><br /><br /> <span data-ttu-id="4edfd-130">Routine`get_<variablename>`</span><span class="sxs-lookup"><span data-stu-id="4edfd-130">`get_<variablename>` procedure</span></span><br /><br /> <span data-ttu-id="4edfd-131">Routine`set_<variablename>`</span><span class="sxs-lookup"><span data-stu-id="4edfd-131">`set_<variablename>` procedure</span></span>|  
   
- <span data-ttu-id="a67eb-132">A causa del rischio di conflitti di nomi, è consigliabile evitare di denominare gli elementi di programmazione dichiarati usando la stessa forma di qualsiasi membro implicito.</span><span class="sxs-lookup"><span data-stu-id="a67eb-132">Because of the risk of name conflicts, you should avoid naming any declared programming element using the same form as any one of these implicit members.</span></span> <span data-ttu-id="a67eb-133">Ad esempio, è consigliabile evitare qualsiasi nome di elemento che inizia con `get_` o `set_`.</span><span class="sxs-lookup"><span data-stu-id="a67eb-133">For example, you should avoid any element name that starts with `get_` or `set_`.</span></span>  
+ <span data-ttu-id="4edfd-132">A causa del rischio di conflitti di nomi, è consigliabile evitare di denominare gli elementi di programmazione dichiarati usando la stessa forma di qualsiasi membro implicito.</span><span class="sxs-lookup"><span data-stu-id="4edfd-132">Because of the risk of name conflicts, you should avoid naming any declared programming element using the same form as any one of these implicit members.</span></span> <span data-ttu-id="4edfd-133">Ad esempio, è consigliabile evitare qualsiasi nome di elemento che inizia con `get_` o `set_`.</span><span class="sxs-lookup"><span data-stu-id="4edfd-133">For example, you should avoid any element name that starts with `get_` or `set_`.</span></span>  
   
- <span data-ttu-id="a67eb-134">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="a67eb-134">By default, this message is a warning.</span></span> <span data-ttu-id="a67eb-135">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="a67eb-135">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="4edfd-134">Per impostazione predefinita, si tratta di un messaggio di avviso.</span><span class="sxs-lookup"><span data-stu-id="4edfd-134">By default, this message is a warning.</span></span> <span data-ttu-id="4edfd-135">Per altre informazioni su come nascondere gli avvisi o considerarli come errori, vedere [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span><span class="sxs-lookup"><span data-stu-id="4edfd-135">For more information about hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="a67eb-136">**ID errore:** BC40022</span><span class="sxs-lookup"><span data-stu-id="a67eb-136">**Error ID:** BC40022</span></span>  
+ <span data-ttu-id="4edfd-136">**ID errore:** BC40022</span><span class="sxs-lookup"><span data-stu-id="4edfd-136">**Error ID:** BC40022</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a67eb-137">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="a67eb-137">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4edfd-137">Per correggere l'errore</span><span class="sxs-lookup"><span data-stu-id="4edfd-137">To correct this error</span></span>  
   
-- <span data-ttu-id="a67eb-138">Se si prevede di nascondere il membro della classe base, sostituire la parola chiave [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) con la parola chiave [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) nella dichiarazione della proprietà.</span><span class="sxs-lookup"><span data-stu-id="a67eb-138">If you intend to hide, or shadow, the base class member, replace the [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) keyword with the [Shadows](../../visual-basic/language-reference/modifiers/shadows.md) keyword in the declaration of the property.</span></span>  
+- <span data-ttu-id="4edfd-138">Se si prevede di nascondere il membro della classe base, sostituire la parola chiave [Overloads](../language-reference/modifiers/overloads.md) con la parola chiave [Shadows](../language-reference/modifiers/shadows.md) nella dichiarazione della proprietà.</span><span class="sxs-lookup"><span data-stu-id="4edfd-138">If you intend to hide, or shadow, the base class member, replace the [Overloads](../language-reference/modifiers/overloads.md) keyword with the [Shadows](../language-reference/modifiers/shadows.md) keyword in the declaration of the property.</span></span>  
   
-- <span data-ttu-id="a67eb-139">Se non si intende nascondere il membro della classe base, modificare il nome della proprietà per evitare conflitti con i nomi elencati nella tabella precedente.</span><span class="sxs-lookup"><span data-stu-id="a67eb-139">If you do not intend to shadow the base class member, change the name of the property to avoid the name conflicts described in the previous table.</span></span>  
+- <span data-ttu-id="4edfd-139">Se non si intende nascondere il membro della classe base, modificare il nome della proprietà per evitare conflitti con i nomi elencati nella tabella precedente.</span><span class="sxs-lookup"><span data-stu-id="4edfd-139">If you do not intend to shadow the base class member, change the name of the property to avoid the name conflicts described in the previous table.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a67eb-140">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="a67eb-140">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="4edfd-140">Vedere anche</span><span class="sxs-lookup"><span data-stu-id="4edfd-140">See also</span></span>
 
-- [<span data-ttu-id="a67eb-141">Nomi di elementi dichiarati</span><span class="sxs-lookup"><span data-stu-id="a67eb-141">Declared Element Names</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
+- [<span data-ttu-id="4edfd-141">Declared Element Names</span><span class="sxs-lookup"><span data-stu-id="4edfd-141">Declared Element Names</span></span>](../programming-guide/language-features/declared-elements/declared-element-names.md)
